# agents

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
config/: mcp_registry.json
core/: brain.py  logging_config.py  mcp_dispatcher.py  observability.py  orchestrator.py  reflection.py  skill_loader.py  skill_registry.py  sub_agent.py
core/llm/: __init__.py  anthropic_llm.py  base.py  factory.py  gemini_llm.py  ollama_llm.py  openai_llm.py
core/memory/: episodic_store.py  procedural_store.py  semantic_store.py  working_memory.py
mcp_servers/: pdf_mcp.py
skills/file/: SKILL.md
skills/pdf/: SKILL.md
skills/web/: SKILL.md
tests/: conftest.py  test_llm_providers.py  test_memory.py  test_orchestrator.py  test_skill_loader.py  test_skill_registry.py
tests/eval/: eval_dataset.jsonl  hallucination_eval.py  run_eval.py
