[project]
name = "agents"
version = "0.1.0"
description = "Skill-based multi-agent system with MCP tool dispatch, multi-LLM support, and cognitive memory"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # --- LLM Providers ---
    "anthropic>=0.45.0",
    "openai>=1.60.0",
    "google-genai>=1.0.0",

    # --- Memory & Storage ---
    "aiosqlite>=0.22.1",
    "chromadb>=0.5.0",
    "aiofiles>=24.1.0",

    # --- Configuration ---
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",

    # --- Logging & Observability ---
    "structlog>=24.0",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",

    # --- MCP & Networking ---
    "httpx>=0.27",
    "mcp>=1.0",

    # --- PDF Generation ---
    "reportlab>=4.0",

    # --- Utilities ---
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "eval: marks evaluation tests that call real LLMs",
]

[tool.ruff]
line-length = 100
target-version = "py312"
